--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,6 @@
 
 @layer base {
   :root {
-        @apply border-border;
      --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
     --card: 0 0% 100%;
@@ -25,7 +24,6 @@
     --input: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
     --radius: 0.5rem;
-  }
   }
 
   .dark {
@@ -88,4 +86,4 @@
 
 .ContactFormPhoneInput .PhoneInputCountrySelectArrow {
   opacity: 0.6;
-}
+}}
